student/manifests/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  labels:
    app.kubernetes.io/part-of: ckad-namespace-workshop
spec:
  replicas: 1 # TODO: obtenir deux Pods disponibles.
  selector:
    matchLabels:
      app: frontend
      tier: web
  template:
    metadata:
      labels:
        app: frontend
        tier: web
        app.kubernetes.io/part-of: ckad-namespace-workshop
    spec:
      containers:
        - name: nginx
          image: nginx:1.28.0-alpine
          ports:
            - name: http
              containerPort: 80
          # TODO: ajouter resources et readinessProbe.
