student/manifests/11-test-backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-backend
  labels:
    app: backend
    tier: api
    app.kubernetes.io/part-of: ckad-namespace-workshop
spec:
  restartPolicy: Never
  containers:
    - name: busybox
      image: busybox:1.37.0
      command: ["sleep", "3600"]
      resources:
        requests: {cpu: 10m, memory: 16Mi}
        limits: {cpu: 50m, memory: 32Mi}
